Correct 'more' menu item alignment

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -47,4 +47,6 @@
     background-color: #fff;
     color: #026aa7;
     margin: 5px;
+    text-align: center;
+
 }
